fix: dark mode color

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,7 +39,7 @@ html[data-theme="dark"] {
     --color-primary-hover: #7589ff;
     --color-secondary: #b8d44a;
     --color-background: #1a1a1a;
-    --color-text: #e0e0e0;
+    --color-text: #d9d9d9d1;
     --color-text-muted: #a0a0a0;
     --color-text-light: #888;
     --color-border: #404040;
